--- a/main.css
+++ b/main.css
@@ -1,9 +1,4 @@
-·splashBody{
-    background-color:#000000;
-    top:0;
-    left:0;
-    z-index:1;
-}
+
 
 .splash{
     width:400px;
@@ -17,8 +12,11 @@
 iframe{
     margin-left: 3%;
     margin-top: 3%;
+    margin-right: 5%;
+    width: 90%;
     height: 50%;
+
 }
 .card{
-    padding:10%;
+    padding:8%;
 }
